@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2018 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2019 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -25,6 +25,7 @@ package net.sf.jasperreports.engine.fill;
 
 import java.awt.Color;
 import java.awt.geom.Rectangle2D;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -344,9 +345,10 @@ public class JRFillChart extends JRFillElement implements JRChart
 			try 
 			{
 				Class<?> customizerClass = JRClassLoader.loadClassForName(customizerClassName);
-				customizer = (JRChartCustomizer) customizerClass.newInstance();
+				customizer = (JRChartCustomizer) customizerClass.getDeclaredConstructor().newInstance();
 			}
-			catch (Exception e) 
+			catch (ClassNotFoundException | InstantiationException | IllegalAccessException 
+				| NoSuchMethodException | InvocationTargetException e) 
 			{
 				throw 
 					new JRRuntimeException(
@@ -1384,7 +1386,7 @@ public class JRFillChart extends JRFillElement implements JRChart
 
 		Color color = interval.getBackgroundColor();
 		float[] components = color.getRGBColorComponents(null);
-		float alpha = interval.getAlphaDouble() == null ? (float)JRMeterInterval.DEFAULT_TRANSPARENCY : interval.getAlphaDouble().floatValue();
+		float alpha = (float)(interval.getAlphaDouble() == null ? JRMeterInterval.DEFAULT_TRANSPARENCY : interval.getAlphaDouble());
 
 		Color alphaColor = new Color(components[0], components[1], components[2], alpha);
 
