@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2018 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2019 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -30,6 +30,7 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.StringWriter;
 import java.io.Writer;
+import java.lang.reflect.InvocationTargetException;
 import java.text.MessageFormat;
 import java.text.NumberFormat;
 import java.text.SimpleDateFormat;
@@ -740,6 +741,7 @@ public class JRApiWriter
 			
 			write( "JRDesignVariable " + variableName + " = new JRDesignVariable();\n");
 			write( variableName + ".setName(\"{0}\");\n", JRStringUtil.escapeJavaStringLiteral(variable.getName()));
+			write( variableName + ".setDescription(\"{0}\");\n", JRStringUtil.escapeJavaStringLiteral(variable.getDescription()));
 			write( variableName + ".setValueClassName(\"{0}\");\n", variable.getValueClassName());
 			write( variableName + ".setResetType({0});\n", variable.getResetTypeValue(), ResetTypeEnum.REPORT);
 			write( variableName + ".setResetGroup({0});\n", resetGroupName);
@@ -1824,7 +1826,7 @@ public class JRApiWriter
 		{
 			String datasetName = parentName + datasetNameSuffix;
 			write( "JRDesignPieDataset " + datasetName + " = new JRDesignPieDataset(" + parentName + ".getDataset());\n");
-			write( datasetName + ".setMaxCount(Integer.valueOf({0, number, #}));\n", dataset.getMaxCount());
+			write( datasetName + ".setMaxCount({0, number, #});\n", dataset.getMaxCount());
 			write( datasetName + ".setMinPercentage({0});\n", dataset.getMinPercentage());
 	
 			writeElementDataset( dataset, datasetName);
@@ -2864,7 +2866,7 @@ public class JRApiWriter
 				
 				write( "JRDesignMeterPlot " + plotName + " = (JRDesignMeterPlot)" + chartName + ".getPlot();\n");
 				write( plotName + ".setShape({0});\n", plot.getShapeValue());
-				write( plotName + ".setMeterAngle(Integer.valueOf({0, number, #}));\n", plot.getMeterAngleInteger());
+				write( plotName + ".setMeterAngle({0, number, #});\n", plot.getMeterAngleInteger());
 				
 				write( plotName + ".setUnits(\"{0}\");\n", JRStringUtil.escapeJavaStringLiteral(plot.getUnits()));
 				write( plotName + ".setTickInterval({0});\n", plot.getTickIntervalDouble());
@@ -3908,11 +3910,11 @@ public class JRApiWriter
 	{
 		if (box != null)
 		{
-			write( boxHolder + ".setPadding(Integer.valueOf({0, number, #}));\n", box.getOwnPadding());
-			write( boxHolder + ".setTopPadding(Integer.valueOf({0, number, #}));\n", box.getOwnTopPadding());
-			write( boxHolder + ".setLeftPadding(Integer.valueOf({0, number, #}));\n", box.getOwnLeftPadding());
-			write( boxHolder + ".setBottomPadding(Integer.valueOf({0, number, #}));\n", box.getOwnBottomPadding());
-			write( boxHolder + ".setRightPadding(Integer.valueOf({0, number, #}));\n", box.getOwnRightPadding());
+			write( boxHolder + ".setPadding({0, number, #});\n", box.getOwnPadding());
+			write( boxHolder + ".setTopPadding({0, number, #});\n", box.getOwnTopPadding());
+			write( boxHolder + ".setLeftPadding({0, number, #});\n", box.getOwnLeftPadding());
+			write( boxHolder + ".setBottomPadding({0, number, #});\n", box.getOwnBottomPadding());
+			write( boxHolder + ".setRightPadding({0, number, #});\n", box.getOwnRightPadding());
 
 			writePen( box.getPen(), boxHolder + ".getPen()");
 			writePen( box.getTopPen(), boxHolder + ".getTopPen()");
@@ -3940,7 +3942,7 @@ public class JRApiWriter
 			write( paragraphName + ".setRightIndent({0});\n", paragraph.getOwnRightIndent());
 			write( paragraphName + ".setSpacingBefore({0});\n", paragraph.getOwnSpacingBefore());
 			write( paragraphName + ".setSpacingAfter({0});\n", paragraph.getOwnSpacingAfter());
-			write( paragraphName + ".setTabStopWidth(Integer.valueOf({0, number, #}));\n", paragraph.getOwnTabStopWidth());//FIXMENOW is this pattern needed?
+			write( paragraphName + ".setTabStopWidth({0, number, #});\n", paragraph.getOwnTabStopWidth());//FIXMENOW is this pattern needed?
 
 			TabStop[] tabStops = paragraph.getTabStops();
 			if (tabStops != null && tabStops.length > 0)
@@ -4072,7 +4074,7 @@ public class JRApiWriter
 	 */
 	protected void write(String pattern, int value)
 	{
-		write(MessageFormat.format(pattern, new Object[]{Integer.valueOf(value)}));
+		write(MessageFormat.format(pattern, new Object[]{value}));
 	}
 
 	
@@ -4083,7 +4085,7 @@ public class JRApiWriter
 	{
 		if (value != defaultValue)
 		{
-			write(MessageFormat.format(pattern, new Object[]{Integer.valueOf(value)}));
+			write(MessageFormat.format(pattern, new Object[]{value}));
 		}
 	}
 
@@ -4106,7 +4108,7 @@ public class JRApiWriter
 		{
 			String strFloat = 
 				MessageFormat.format(
-					"new Float({0})", 
+					"{0}f", 
 					new Object[]{NumberFormat.getInstance(Locale.ENGLISH).format(value).replaceAll(",", "")}
 					);
 			write(MessageFormat.format(pattern, new Object[]{strFloat}));
@@ -4132,7 +4134,7 @@ public class JRApiWriter
 		{
 			String strDouble = 
 				MessageFormat.format(
-					"new Double({0})", 
+					"{0}d", 
 					new Object[]{NumberFormat.getInstance(Locale.ENGLISH).format(value).replaceAll(",", "")}
 					);
 			write(MessageFormat.format(pattern, new Object[]{strDouble}));
@@ -4147,7 +4149,7 @@ public class JRApiWriter
 	{
 		if (value != defaultValue)
 		{
-			write(MessageFormat.format(pattern, new Object[]{value ? Boolean.TRUE : Boolean.FALSE}));
+			write(MessageFormat.format(pattern, new Object[]{value}));
 		}
 	}
 
@@ -4159,7 +4161,7 @@ public class JRApiWriter
 	{
 		if (value != defaultValue)
 		{
-			write(MessageFormat.format(pattern, new Object[]{new Byte(value)}));
+			write(MessageFormat.format(pattern, new Object[]{value}));
 		}
 	}
 
@@ -4207,7 +4209,7 @@ public class JRApiWriter
 	{
 		return key == null 
 			? null 
-			: (key.booleanValue() ? "Boolean.TRUE" : "Boolean.FALSE");
+			: (key ? "Boolean.TRUE" : "Boolean.FALSE");
 	}
 	
 	/**
@@ -4260,11 +4262,12 @@ public class JRApiWriter
 		try
 		{
 			Class<?> reportCreatorClass = Class.forName(reportCreatorClassName);
-			ReportCreator reportCreator = (ReportCreator)reportCreatorClass.newInstance();
+			ReportCreator reportCreator = (ReportCreator)reportCreatorClass.getDeclaredConstructor().newInstance();
 			JasperDesign jasperDesign = reportCreator.create();
 			new JRXmlWriter(DefaultJasperReportsContext.getInstance()).write(jasperDesign, destFileName, "UTF-8");
 		}
-		catch (Exception e)
+		catch (ClassNotFoundException | NoSuchMethodException | InvocationTargetException 
+			| IllegalAccessException | InstantiationException | JRException e)
 		{
 			if (log.isErrorEnabled())
 			{
